--- a/background-color switcher/index.html
+++ b/background-color switcher/index.html
@@ -10,12 +10,16 @@
 <body>
     <div class="canvas">
      <h1>Color Switcher</h1>
-    <span class="button" id="grey"></span>
     <span class="button" id="red"></span>
-    <span class="button" id="blue"></span>
+    <span class="button" id="orange"></span>
     <span class="button" id="yellow"></span>
+    <span class="button" id="green"></span>
+    <span class="button" id="blue"></span>
+    <span class="button" id="navy"></span>
+    <span class="button" id="purple"></span>
     <h2>버튼을 눌러보세요! <span>click button!</span></h2>   
     </div>
     <script src="color-switcher.js"></script>
+
 </body>
 </html>
